tests/negative/lexer/float-digit.orng
fn main() -> Int 
    0.1'abc
    0